fix(editor): Correct alignment of poover menu

--- a/src/components/editor/editor.css
+++ b/src/components/editor/editor.css
@@ -26,6 +26,11 @@ fireenjin-editor .ce-toolbar {
   right: auto;
 }
 
+fireenjin-editor .ce-popover {
+  right: auto;
+  left: 0 !important;
+}
+
 fireenjin-editor .ce-toolbar__actions {
   background-color: rgba(255, 255, 255, 0.7);
   border-radius: 0;
